--- a/index.html
+++ b/index.html
@@ -5,15 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rome</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <header>
     <h1>Rome</h1>
     <nav>
         <a href="index.html">Home Page</a>
         <a href="cityimages.html">City Images</a>
     </nav>
+    </header>
+    <main>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam dolor, soluta dolore ex minima voluptates enim quod alias reiciendis deleniti omnis nesciunt animi beatae corporis in nam minus, perferendis cumque!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae totam sit nisi architecto natus, obcaecati voluptatibus optio adipisci nesciunt ipsam voluptas possimus labore molestias id quos mollitia nostrum officia ullam.</p>
-    <table></table>
+    <table border="1">
+        <tr>
+            <th>Name</th>
+            <th>Email</th>
+        </tr>
+        <tr>
+            <td>
+                Noah Wiggins
+            </td>
+            <td>
+                nwiggins@pgh.yearup.org
+            </td>
+        </tr>
+    </table>
+    </main>
 </body>
 </html>
